syntax = "proto3";
package node;

import "github.com/aperturerobotics/storageref/storageref.proto";

// NodeState contains the state of a Node.
message NodeState {
  // LastMsgRef is the reference to the last node message.
  storageref.StorageRef last_msg_ref = 1;
}