syntax = "proto3";
package node;

// Config is the node config.
message Config {
  // PrivKey is the private key of the node.
  bytes priv_key = 1;
}