syntax = "proto3";
package txdb;

import "github.com/aperturerobotics/hydra/cid/cid.proto";

// TransactionInfo attaches information to a transaction.
message TransactionInfo {
  // NodeMessageRef is the reference to the inca.NodeMessage containing the tx.
  cid.BlockRef node_message_ref = 1;
}